--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,5 @@
 name: um-tag-publisher
-version: 1.0.1
+version: 1.0.0
 title: Um Tag Publisher
 description: Tag and publish the version of a UM
 author: https://github.com/thanyalukj
@@ -12,4 +12,7 @@ configuration:
       type: string
     file_path:
       type: string
+    create_release:
+      type: boolean
+      default: true
   additionalProperties: false
